bicep/openshift-deploy/aroocp/manifests/nscreate/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: NSNAME
  name: NSNAME
