bicep/openshift-deploy/aroocp/manifests/nscreate/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: graphql
  namespace: NSNAME
spec:
  gateways:
  - graphql-gateway
  hosts:
  - HOSTROUTE 
  http:
  - match:
    - uri:
        exact: GLP
    route:
    - destination:
        host: SVCNAME
        port:
          number: SVCPORT
